--- a/about/index.html
+++ b/about/index.html
@@ -122,8 +122,10 @@
             </p>
           </div>
         </div>
-      </div>    
+      </div> 
+      <!--footer content ends-->   
     </div>
+    <!--footer content-wrapper ends-->
     <div class="copyright">
       <p>Copyright 2019 | Unplugged</p>
     </div> 
