Added Tablet Breakpoint Styles

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </ul>
       </nav>
     </div>
+    <!---Header Content Wrapper Ends-->
   </header>
 
   <main>
     <section class="hero-area">
       <div class="content-wrapper">
-        <h1>Retreat from the desk, return refreshed.</h1>
-        <img src="" alt="hero image">   
+        <h1>Retreat from the desk, return refreshed.</h1>   
       </div>
     </section>
 
